# SATAN

./: .asm-lsp.toml  .gitignore  Cargo.toml  README.md  a.out  bochsrc  bootboot.sym  build.rs  build.sh  bx_enh_dbg.ini  design.md  flake.nix  kernel.sym  rust-toolchain.toml
.cargo/: config.toml
kernel/: kernel.c  kernel.h
kernel/arch/x86/arch/: initialize.c
kernel/arch/x86/arch/paging/: page_info_table.cpp  paging.c  paging.h  paging_impl.h
kernel/memory/paging/: paging.h
src/: log.rs  main.rs  memory.rs  sync.rs  test.c
src/arch/: mod.rs
src/arch/x86/: cpu.rs  early_logger.rs  instructions.rs  interrupts.rs  mod.rs  tests.rs
src/arch/x86/interrupts/: mod.rs  state.rs
src/arch/x86/memory/: address_space.rs  mod.rs  tmp_page.rs
src/arch/x86/paging/: address_space.rs  early_page_alloc.rs  mod.rs  page_alloc.rs  page_size.rs  page_table.rs  page_table_entry.rs  tmp_page.rs
src/arch/x86/x32/: bootstrap.S  linker.ld  log.rs  mod.rs  target.json
src/arch/x86/x32/paging/: mmap.rs  mod.rs  palloc.rs
src/arch/x86/x64/: linker.ld  mod.rs  target.json
src/memory/: address_space.rs  page_allocator.rs
src/memory/address_space/: nested_page_table.rs
src/memory/page_allocator/: zoned_buddy.rs
