[package]
name = "satan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "satan"
test = false
doctest = false
bench = false

[profile.dev]
panic ="abort"

[profile.release]
panic ="abort"

[dependencies]
multiboot2 = { version = "0.23.1", default-features = false }
x86 = "0.52.0"

[build-dependencies]
cc = "<=1.0.73"
bindgen = "0.71.0"
