[package]
name = "satan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "satan"
test = false
doctest = false
bench = false

[profile.dev]
panic ="abort"

[profile.release]
panic ="abort"

[features]
kernel-tests = []

[dependencies]
thiserror = { version = "2.0.9", default-features = false }
lock_api = "0.4.12"
spin = "0.9.8"

bitfield-struct = "0.10.0"
bitflags = "2.6.0"

memory_addr = "0.3.1"
lock_free_buddy_allocator = "0.1.0"
talc = "4.4.2"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
multiboot2 = { version = "0.23.1", default-features = false }
portable = "0.2.1"

[build-dependencies]
cc = "<=1.0.73"
bindgen = "0.71.0"
